css/dashboard.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Raleway', 'Segoe UI';
}
body {
    position: relative;
}
.header-for-desktop{
    display: none;
}
.header-for-mobile .top-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1em 2em;
    background: #191925;
}
.header-for-mobile .search-fields {
    display: flex;
    justify-content: space-between;
    padding: 1em 2em;
    background: #010210;
}
.header-for-mobile .search-fields input, select {
    border-top: 4px solid #FCA311;
    border-right: 8px solid #FCA311;
    border-bottom: 4px solid #FCA311;
    border-left: 8px solid #FCA311;
    border-radius: 8px;
    width: 100%;
    padding: 0.6em;
    margin-left: 12px;
}
.notification-panel {
    display: flex;
}
.notification-panel * + * {
    padding-left: 12px;
}
.logo {
    width: 42px;
}
nav {
    color: white;
    position: absolute;
    top: 0;
    right: 100vw;
    width: 100%;
    height: 100vh;
    background-color: #01010B;
    padding: 5em 0 0 4em;
    transition: 500ms ease-in-out all;
}
nav.active {
    color: white;
    position: absolute;
    top: 0;
    width: 100%;
    height: 100vh;
    background-color: #01010B;
    padding: 5em 0 0 4em;
    right: 0vw;
}
nav h4 {
    margin: 1em 0;
}
nav a {
    display: flex;
    align-items: center;
    justify-content: start;
    color: white;
    text-decoration: none;
}
li {
    list-style: none;
    line-height: 50px;
    margin: 0.4em 0;
}
li a img {
    margin-right: 16px;
}
li:focus, li:active, li:hover {
    filter: invert(64%) sepia(44%) saturate(1066%) hue-rotate(351deg) brightness(102%) contrast(98%);
    border-right: 10px solid #1d3f4b;
}
nav #close-icon {
    position: absolute;
    top: 5em;
    right: 4em;
    width: 40px;
}
main {
    background-color: #010210;
}
@media screen and (min-width: 768px) {
    .header-for-mobile {
        display: none;
    }
    .header-for-desktop  {
        position: relative;
        z-index: 1;
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 1em 2em;
        background-color: #01010B;
        box-shadow: 0px -20px 21px 20px rgb(255 255 255 / 18%);
    }
    .header-for-desktop .search-fields {
        display: flex;
        justify-content: center;
        width: 90%;
    }
    .header-for-desktop .search-fields input, select {
        border: 1px solid white;
        background: transparent;
        color: white;
        border-radius: 8px;
        width: 30%;
        max-width: 260px;
        padding: 0.6em;
    }
    nav {
        position: fixed;
        top: unset;
        left: 0;
        width: 30%;
        max-width: 300px;
        padding: 1em 0 0 2.3em;
        transition: 0ms ease-in-out all;
    }
    nav h4 {
        margin: 1em 0;
    }
    nav a {
        display: flex;
        align-items: center;
        justify-content: start;
        color: white;
        text-decoration: none;
    }
    li {
        list-style: none;
        line-height: 45px;
    }
    li a img {
        margin-right: 16px;
    }
    li:focus, li:active, li:hover {
        filter: invert(64%) sepia(44%) saturate(1066%) hue-rotate(351deg) brightness(102%) contrast(98%);
        border-right: 10px solid #1d3f4b;
    }
    nav #close-icon {
        display: none;
    }
}

